fix paragraph margin and text alignment

--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -14,6 +14,12 @@ header > a
 article header
   margin-bottom: 1.5em
 
+article p
+  text-align: justify
+
+article h1
+  margin-top: 1.5em
+
 nav
   margin: .5em -.8em
 
